<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/schedule_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/enterSearchLocationsLayout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/startMapPin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/location_place" />

                <AutoCompleteTextView
                    android:id="@+id/start_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_loc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/endMapPin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/location_place" />

                <AutoCompleteTextView
                    android:id="@+id/end_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_loc" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:contentDescription="@null"
            android:src="@drawable/action_search" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/map_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:fadingEdgeLength="20dp" >

        <FrameLayout
            android:id="@+id/addMoreLocations"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@drawable/schedule_background" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tap_to_add"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/mapFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
 			android:layout_below="@+id/addMoreLocations">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/addMoreLocations" />
        </FrameLayout>

        <ImageView
            android:id="@+id/expandMapIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/addMoreLocations"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:src="@drawable/full_screen_icon" />

        <ImageView
            android:id="@+id/getUserLocIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:src="@drawable/device_access_location_found" />
    </RelativeLayout>

</LinearLayout>